--- a/notebooks/ Data_understanding_&_Data_prepration.ipynb
+++ b/notebooks/ Data_understanding_&_Data_prepration.ipynb
@@ -18422,7 +18422,7 @@
     }
    ],
    "source": [
-    "pd_data_base = pd_data_base.drop(['Lat','Long'],axis = 1)\n",
+    "pd_data_baspd_data_base = pd_data_base.drop(['Lat','Long'],axis = 1)\n",
     "pd_data_base.head()"
    ]
   },
